added https to application.properties, added entry .gitignore

--- a/src/api/ojack-payment/src/main/resources/application.properties
+++ b/src/api/ojack-payment/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.data.mongodb.database=OJackWallet
+
+server.port=9443
+
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=<cert_p12_file>
+server.ssl.key-store-password=<p12_password>
+server.ssl.key-alias=<p12_alias>
