add application.properties to gitignore

--- a/src/api/ojack-payment/.gitignore
+++ b/src/api/ojack-payment/.gitignore
@@ -30,3 +30,6 @@ HELP.md
 
 ### keystore ###
 /src/main/resources/keystore/
+
+### application.properties ###
+/src/main/resources/application.properties
