--- a/src/api/ojack-payment/pom.xml
+++ b/src/api/ojack-payment/pom.xml
@@ -80,17 +80,17 @@
         </dependency>
 
 
-        <!--        <dependency>-->
-<!--            <groupId>com.squareup.retrofit2</groupId>-->
-<!--            <artifactId>retrofit</artifactId>-->
-<!--            <version>2.5.0</version>-->
-<!--        </dependency>-->
+                <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>retrofit</artifactId>
+            <version>2.5.0</version>
+        </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>com.squareup.retrofit2</groupId>-->
-<!--            <artifactId>converter-gson</artifactId>-->
-<!--            <version>2.5.0</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>converter-gson</artifactId>
+            <version>2.5.0</version>
+        </dependency>
 
     </dependencies>
 
